Gizmo orientation problem #56642

Closed
opened 2018-09-01 14:00:17 +02:00 by Vasil · 7 comments

System Information
windows 8 64 bit , video card - Nvidia GeForce980ti

Blender Version
2.8 Alpha 2 hash a5f950ed38

Short description of error
The problem in the 3D viewport with the gizmo.
If you set "transform orientation" to "view", gizmo arrows don't follow view rotation

Exact steps for others to reproduce the error

  1. Select the object in 3D viewport.
  2. Choose "grab" transform in "toolbar"
  3. Set "transform orientation" to "view"
  4. Move around the object in 3d space.

Screenshot_89.png

**System Information** windows 8 64 bit , video card - Nvidia GeForce980ti **Blender Version** 2.8 Alpha 2 hash a5f950ed381 **Short description of error** The problem in the 3D viewport with the gizmo. If you set "transform orientation" to "view", gizmo arrows don't follow view rotation **Exact steps for others to reproduce the error** 1. Select the object in 3D viewport. 2. Choose "grab" transform in "toolbar" 3. Set "transform orientation" to "view" 4. Move around the object in 3d space. ![Screenshot_89.png](https://archive.blender.org/developer/F4503313/Screenshot_89.png)
Author

Added subscriber: @FeralMan

Added subscriber: @FeralMan

#58459 was marked as duplicate of this issue

#58459 was marked as duplicate of this issue

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Campbell Barton was assigned by William Reynish 2018-09-01 21:29:31 +02:00

Confirmed. The Gizmo orientation isn't properly updated as you change the view.

Confirmed. The Gizmo orientation isn't properly updated as you change the view.

Added subscribers: @Crumpley, @ideasman42

Added subscribers: @Crumpley, @ideasman42

This issue was referenced by 2df86ca967

This issue was referenced by 2df86ca9672759c8a99fa72e5e6d3d3e0c2da5c7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56642
No description provided.