Fix T56642: 3D view gizmo orientation wont update